--- a/miniGithub/templates/miniGithub/collaborators_view.html
+++ b/miniGithub/templates/miniGithub/collaborators_view.html
@@ -53,6 +53,8 @@
               </a>
           </td>
         </tr>
+  {% empty %}
+    <p>There are no collaborators on this project</p>
   {% endfor %}
   </table>
 {% endblock %}
