--- a/miniGithub/templates/miniGithub/projects.html
+++ b/miniGithub/templates/miniGithub/projects.html
@@ -18,10 +18,28 @@
     background-color: #dddddd;
   }
 </style>
+  <div class="row" style="align-items: center; display: flex;">
+    <div class="col-md-10">
+      <h3>My Projects</h3>
+    </div>
+    <div class="col-md-2">
+      <a href="{% url 'project_add_edit' 0  %}" class="btn btn-primary">
+        Add project
+      </a> 
+    </div>
+  </div>
+  <br />
+  <div class="list-group">
+    {% for project in projects %}
+      <a class="list-group-item" href="/projects/{{ project.id }}/problems/">
+        {{ project.title }}
+      </a>
+    {% empty %}
+      <p>There are no projects created</p>
+    {% endfor %}
+  </div>
 
-  <h2>My Projects</h2>
-
-  <table>
+  <!-- <table>
     <tr>
       <th>#</th>
       <th>Title</th>
@@ -61,6 +79,6 @@
           </td>
         </tr>
   {% endfor %}
-  </table>
+  </table> -->
 {% endblock %}
 
