--- a/miniGithub/templates/miniGithub/add_collaborator_view.html
+++ b/miniGithub/templates/miniGithub/add_collaborator_view.html
@@ -1,15 +1,15 @@
 {% extends "miniGithub/base.html" %}
 {% block body_block %}
 
-    <div class="container">
-        <div class="jumbotron">
-            <h2>Add collaborator on project: <b>{{project.title}}</b></h2>
+            <h3>Add collaborator on project: <b>{{project.title}}</b></h3>
                 <form action="save_collaborator/" method="post">
                     {% csrf_token %}
-                    <div>
+                    <div class="form-group">
                         <label for="email">Email:</label>
-                        <input type="text" name="email" placeholder="Email">
-                        <input type="submit" name="add" value="ADD">
+                        <input type="text" name="email" class="form-control" placeholder="Email">
+                    </div>
+                    <div>
+                        <input  class="btn btn-success"type="submit" name="add" value="Add collaborator">
                     </div>
                 </form>
         </div>
