--- a/miniGithub/templates/miniGithub/login.html
+++ b/miniGithub/templates/miniGithub/login.html
@@ -1,26 +1,22 @@
 {% extends "miniGithub/base.html" %}
 {% block body_block %}
-      <div class="container">
-        <div class="jumbotron">
-              <h1>Login here :</h1>
-            <form method="post" action="{% url 'login' %}">
-                {% csrf_token %}
-                {# A more "HTML" way of creating the login form#}
-                <div>
-                    <label for="username">Username:</label>
-                    <input type="text" name="username" placeholder="Username">
-                </div>
-                <div>
-                    <label for="password">Password:</label>
-                    <input type="password" name="password" placeholder="Password">
-                </div>
-                <div>
-                    <input type="submit" name="" value="Login">
-                </div>
-
-            </form>
+    <h3 style="margin-bottom: 40px;">Login here :</h3>
+    <form method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        {# A more "HTML" way of creating the login form#}
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input class="form-control" type="text" name="username" placeholder="Username">
         </div>
-      </div>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input class="form-control" type="password" name="password" placeholder="Password">
+        </div>
+        <div style="margin-top: 80px; margin-bottom: 20px;">
+            <input class="btn btn-success" type="submit" name="" value="Login">
+        </div>
+
+    </form>
 
     {% if messages %}
         {% for message in messages %}
