--- a/miniGithub/templates/miniGithub/show_collaborator_projects.html
+++ b/miniGithub/templates/miniGithub/show_collaborator_projects.html
@@ -19,9 +19,19 @@
   }
 </style>
 
-  <h2>Collaboration Projects</h2>
+  <h3>Collaboration Projects</h3>
+  <br />
+  <div class="list-group">
+    {% for project in projects %}
+      <a class="list-group-item" href="/projects/{{ project.id }}/problems/">
+        {{ project.title }}
+      </a>
+    {% empty %}
+      <p>There are no projects you're collaborating on</p>
+    {% endfor %}
+  </div>
 
-  <table>
+  <!-- <table>
     <tr>
       <th>#</th>
       <th>Title</th>
@@ -40,6 +50,6 @@
           </td>
 
   {% endfor %}
-  </table>
+  </table> -->
 {% endblock %}
 
