--- a/miniGithub/templates/miniGithub/signup.html
+++ b/miniGithub/templates/miniGithub/signup.html
@@ -1,21 +1,27 @@
 {% extends "miniGithub/base.html" %}
 {% block body_block %}
-    <h2>Sign up Form</h2>
-        <form method="post">
-          {% csrf_token %}
-          {% for field in form %}
-            <p>
-              {{ field.label_tag }}<br>
-              {{ field }}
-              {% if field.help_text %}
-                <small style="color: grey">{{ field.help_text }}</small>
-              {% endif %}
-              {% for error in field.errors %}
-                <p style="color: red">{{ error }}</p>
-              {% endfor %}
-            </p>
-          {% endfor %}
-          <button type="submit">Sign up</button>
-        </form>
+<h3 style="margin-bottom: 30px;">Register</h3>
+<form method="post">
+  {% csrf_token %}
+  {% for field in form %}
+    <p>
+      <div class="form-group">
+        {{ field.label_tag }}<br>
+        {{ field }}
+        {% if field.help_text %}
+          <span class="help-block">
+            <small style="color: grey">{{ field.help_text }}</small>
+          </span>
+        {% endif %}
+      </div>
+      {% for error in field.errors %}
+        <p style="color: red">{{ error }}</p>
+      {% endfor %}
+    </p>
+  {% endfor %}
+  <div style="margin-top: 60px; margin-bottom: 10px;">
+    <button class="btn btn-success" type="submit">Sign up</button>
+  </div>
+</form>
 {% endblock %}
 
