HOTFIX: added missing closing div tag

--- a/miniGithub/templates/miniGithub/project_details.html
+++ b/miniGithub/templates/miniGithub/project_details.html
@@ -139,6 +139,7 @@
               {% endif %}
             </span>
           </a>
+        </div>
 
         {% empty %}
         <p>There are currently no milestones reported with this filter</p>
